# laendlefinder

./: .gitignore  Cargo.toml  README.md  cargo run  flake.nix  main.rs  roadmap.md  scraper.rs
src/: common_scraper.rs  debug.rs  geocoding.rs  laendleimmo_scraper.rs  lib.rs  main.rs  models.rs  parser.rs  scraper.rs  scrapers.rs  tui.rs  utils.rs
web/: README.md  index.html
