[package]
name = "laendlefinder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A scraper for real estate sales data in Vorarlberg"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.16.0"
regex = "1.9.1"
csv = "1.2.2"
anyhow = "1.0.72"
serde_json = "1.0"
