[package]
name = "laendlefinder"
version = "0.1.0"
edition = "2021"
default-run = "laendlefinder"

[[bin]]
name = "vol-scraper"
path = "src/bin/vol_scraper.rs"

[[bin]]
name = "laendleimmo-scraper"
path = "src/bin/laendleimmo_scraper.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "cookies", "json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
indicatif = "0.17"
rand = "0.8"
tokio = { version = "1.0", features = ["time"] }
urlencoding = "2.1"
